syntax = "proto3";
package raft;

service Raft {
    rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse);
    rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse);
    rpc NewEntry(Entry) returns (EntryResponse);
}

message Entry {
    string ID = 1;
    bytes data = 2;
    int64 term = 3;
}

message AppendEntriesRequest {
    int64 term = 1;
    string leaderID = 2;

    int64 prevLogIndex = 3;
    int64 prevLogTerm = 4;

    Entry entry = 5;
    int64 leaderCommit = 6;
}

message AppendEntriesResponse {
    int64 term = 1;
    bool success = 2;
}

message RequestVoteRequest {
    int64 term = 1;
    string candidateID = 2;
    int64 lastLogIndex = 3;
    int64 lastLogTerm = 4;
}

message RequestVoteResponse {
    int64 term = 1;
    bool voteGranted = 2;
}

message EntryResponse {
    string commandID = 1;
}
